--- a/app/src/main/res/layout/my_orders_adapter.xml
+++ b/app/src/main/res/layout/my_orders_adapter.xml
@@ -136,30 +136,32 @@
                 android:layout_marginTop="@dimen/_10sdp"
                 android:layout_height="wrap_content">
 
+                <com.sa.gograb.view.AppTextView_SubTitle
+                    android:id="@+id/prolist_tv"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:text=""
+                    android:textAppearance="@style/SmallerText"
+                    android:textColor="@color/semi_color" />
+
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/order_rv"
                     android:layout_width="match_parent"
+                    android:visibility="gone"
+                    android:orientation="horizontal"
+                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                     android:layout_height="wrap_content">
 
                 </androidx.recyclerview.widget.RecyclerView>
             </LinearLayout>
-            <com.sa.gograb.view.AppTextView_SubTitle
-                android:id="@+id/tv_item_name"
-                android:visibility="gone"
-                android:layout_width="@dimen/_202sdp"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/_10sdp"
-                android:text="The chicken jumbo burger X1, Cheese sandwich X2"
-                android:maxLines="2"
-                android:textColor="@color/semi_color"
-                android:textAppearance="@style/SmallerText" />
-
             <RelativeLayout
-                android:visibility="gone"
                 android:id="@+id/ln_prepare_time"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/_5sdp"
+                android:layout_marginBottom="@dimen/_10sdp"
+                android:layout_below="@+id/tv_item_name"
                 android:orientation="horizontal">
                 <LinearLayout
                     android:layout_width="wrap_content"
@@ -187,7 +189,7 @@
 
 
                 <com.sa.gograb.view.AppTextView
-                    android:id="@+id/tv_preparation_time"
+                    android:id="@+id/tv_reorder"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:gravity="center"
@@ -198,7 +200,6 @@
                     android:textColor="@color/icon_color" />
 
             </RelativeLayout>
-
 
         </LinearLayout>
 
