--- a/app/src/main/res/layout/login_activity.xml
+++ b/app/src/main/res/layout/login_activity.xml
@@ -127,6 +127,7 @@
                             android:orientation="vertical">
 
                             <com.sa.gograb.view.AppTextView
+                                android:id="@+id/tv_forgot_password"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="@string/forgot_password"
