--- a/app/src/main/res/layout/tool_bar_location.xml
+++ b/app/src/main/res/layout/tool_bar_location.xml
@@ -28,12 +28,13 @@
 
         <com.sa.gograb.view.AppTextView
             android:id="@+id/toolbar_title"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:layout_gravity="center"
-            android:layout_marginLeft="@dimen/_15sdp"
+            android:layout_marginLeft="@dimen/_10sdp"
             android:layout_toRightOf="@+id/toolbar_icon"
+            android:layout_toLeftOf="@+id/iv_location_to"
             android:gravity="left"
             android:maxLines="1"
             android:text=""
@@ -45,7 +46,7 @@
 
 
         <ImageView
-            android:id="@+id/menu_location_to"
+            android:id="@+id/iv_location_to"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="@dimen/activity_gutter_margin_quarter"
