--- a/app/src/main/res/layout/category_menu_sub_adapter.xml
+++ b/app/src/main/res/layout/category_menu_sub_adapter.xml
@@ -146,7 +146,7 @@
                 android:layout_marginTop="@dimen/_10sdp"
                 android:gravity="left"
                 android:maxLines="1"
-                android:text="Indian Daal Fry"
+                android:text=""
                 android:textAllCaps="false"
                 android:textAppearance="@style/SmallMediumText"
                 android:textColor="@color/main_text" />
@@ -163,7 +163,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:singleLine="true"
-                android:text="SAR"
+                android:text=""
                 android:textAllCaps="false"
                 android:textAppearance="@style/SmallMediumText"
                 android:textColor="@color/semi_color" />
@@ -173,7 +173,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:singleLine="true"
-                    android:text="SAR"
+                    android:text=""
                     android:layout_marginLeft="@dimen/_4sdp"
                     android:textAllCaps="false"
                     android:textAppearance="@style/SmallMediumText"
@@ -201,7 +201,7 @@
             android:layout_marginBottom="@dimen/_8sdp"
             android:gravity="left"
             android:maxLines="2"
-            android:text="Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy More"
+            android:text=""
             android:textAllCaps="false"
             android:textAppearance="@style/SmallMediumText"
             android:textColor="@color/semi_color" />
