--- a/app/src/main/res/layout/cart_activity.xml
+++ b/app/src/main/res/layout/cart_activity.xml
@@ -82,7 +82,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:padding="@dimen/_10sdp"
-                                android:text="4.5"
+                                android:text=""
                                 android:textAppearance="@style/SmallMediumText"
                                 android:textColor="@color/main_text" />
 
@@ -97,7 +97,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:padding="@dimen/_10sdp"
-                                android:text="(15+)"
+                                android:text=""
                                 android:textAppearance="@style/SmallMediumText"
                                 android:textColor="@color/semi_color" />
                         </LinearLayout>
@@ -563,7 +563,7 @@
                         android:layout_height="wrap_content"
                         android:textAppearance="@style/SmallMediumText"
                         android:textColor="@color/main_text"
-                        android:text="SAR"/>
+                        android:text=""/>
                     <com.sauthi.gograb.view.AppTextView_SubTitle
                         android:id="@+id/tv_sar_price"
                         android:layout_width="wrap_content"
@@ -571,7 +571,7 @@
                         android:layout_marginLeft="@dimen/_4sdp"
                         android:textAppearance="@style/SmallMediumText"
                         android:textColor="@color/main_text"
-                        android:text="300"/>
+                        android:text=""/>
                 </LinearLayout>
 
 
