--- a/app/src/main/res/layout/order_details_adapter.xml
+++ b/app/src/main/res/layout/order_details_adapter.xml
@@ -34,7 +34,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:text="SAR"
+                android:text=""
                 android:textAppearance="@style/SmallerText"
                 android:textColor="@color/semi_color" />
 
